# rubiks_cube

./: Cargo.toml  README.md
assets/shaders/: shad.fs  shad.vs
src/: cube.rs  lib.rs  rubix.rs  shaders.rs  texture.rs  webGL_context.rs
web/: index.html  index.js  style.css
